pingpong/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: pingpong
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            backend:
              serviceName: pingpong-svc
              servicePort: 6789
